Did some editting to my CSS.

--- a/index.html
+++ b/index.html
@@ -13,26 +13,25 @@
 </head>
 <video src="EldenRingLiveWallpaper.mp4" muted loop autoplay></video>
 <body class="container">
-    
     <header>
         <nav class="navigation-bar">
-            <img class="logo" src="https://seeklogo.com/images/E/elden-ring-logo-0A08D276EC-seeklogo.com.png"/>
-            <div class="home">Home</div>
-            <div class="weapons">Weapons</div>
-            <div class="armor">Armors</div>
-            <div class="bosses">Bosses</div>
-            <div class="misc">Miscellaneous</div>
+            <img class="logo" src="./elden-ring-logo.png"/>
+            <div class="home">HOME</div>
+            <div class="weapons">WEAPONS</div>
+            <div class="armor">ARMORS</div>
+            <div class="bosses">BOSSES</div>
+            <div class="misc">MISCELLANEOUS</div>
             <form class="search">
                 <input placeholder= "Search"/>
                 <button>Search</button>
-            </form>  
+            </form>
         </nav>
     </header>   
     <main></main>
-    <div id="title">Elden Ring Database</div>
-    <img id="image" src=""/>
-    <div id="content1"></div>
-    <div id="content2"></div>
+    <div class="title">WELCOME</div>
+    <img class="image" src="https://image.api.playstation.com/vulcan/img/rnd/202108/0523/qa8tlmB0UGRJa8mS3dS8hUoU.png"/>
+    <img class="image" src="">
+    <div class="content1"></div>
     <footer>
     </footer>
 </body>
