Made a folder for all my pictures, started making a image.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="container">
     <header>
         <nav class="navigation-bar">
-            <img class="logo" src="./elden-ring-logo.png"/>
+            <img class="logo" src="./images/elden-ring-logo.png"/>
             <div class="home">HOME</div>
             <div class="weapons">WEAPONS</div>
             <div class="armor">ARMORS</div>
@@ -29,8 +29,12 @@
     </header>   
     <main></main>
     <div class="title">WELCOME</div>
-    <img class="image" src="https://image.api.playstation.com/vulcan/img/rnd/202108/0523/qa8tlmB0UGRJa8mS3dS8hUoU.png"/>
-    <img class="image" src="">
+    <img class="image" src="https://image.api.playstation.com/vulcan/img/rnd/202108/0523/qa8tlmB0UGRJa8mS3dS8hUoU.png">
+    <img class="image2" src="./images/ER_Class_Vagabond.webp">
+    <img class="image3" src="./images/ER_Class_Warrior.webp">
+    <img class="image4" src="./images/ER_Class_Confessor.webp">
+    <img class="image5" src="./images/ER_Class_Astrologer.webp">
+    <img class ="image6" src="./images/ER_Class_Bandit.webp">
     <div class="content1"></div>
     <footer>
     </footer>
