--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
     </header>   
     <main></main>
     <div class="title">WELCOME</div>
-    <img class="image" src="https://image.api.playstation.com/vulcan/img/rnd/202108/0523/qa8tlmB0UGRJa8mS3dS8hUoU.png">
-    <img class="image2" src="./images/ER_Class_Vagabond.webp">
-    <img class="image3" src="./images/ER_Class_Warrior.webp">
-    <img class="image4" src="./images/ER_Class_Confessor.webp">
-    <img class="image5" src="./images/ER_Class_Astrologer.webp">
-    <img class ="image6" src="./images/ER_Class_Bandit.webp">
+    <img class ="image" src="images/EldenRingDatabaseImage.png">
     <div class="content1"></div>
     <footer>
     </footer>
