Added a function that is officially pulling and display information onto my webpage.

--- a/search.html
+++ b/search.html
@@ -15,12 +15,11 @@
 <body class="container">
     <header>
         <nav class="navigation-bar">
-            <img class="logo" src="media/elden-ring-logo.png">
             <div class="home"><a href="index.html">HOME</a></div>
-            <div class="weapons"><a>WEAPONS</a></div>
-            <div class="armor"><a>ARMORS</a></div>
-            <div class="bosses"><a>BOSSES</a></div>
-            <div class="misc"><a>MISCELLANEOUS</a></div>
+            <div class="weapons"><a href="./weapons.html">WEAPONS</a></div>
+            <div class="armor"><a href="./armors.html">ARMORS</a></div>
+            <div class="bosses"><a href="./bosses.html">BOSSES</a></div>
+            <div class="misc"><a href="./misc.html">MISCELLANEOUS</a></div>
             <form class="search">
                 <input placeholder= "Search"/>
                 <button>Search</button>
