--- a/weapons.html
+++ b/weapons.html
@@ -17,19 +17,19 @@
         <nav class="navigation-bar">
             <img class="logo" src="media/elden-ring-logo.png">
             <div class="home"><a href="index.html">HOME</a></div>
-            <div class="weapons"><a>WEAPONS</a></div>
-            <div class="armor"><a>ARMORS</a></div>
-            <div class="bosses"><a>BOSSES</a></div>
-            <div class="misc"><a>MISCELLANEOUS</a></div>
+            <div class="weapons"><a href="./weapons.html">WEAPONS</a></div>
+            <div class="armor"><a href="./armors.html">ARMORS</a></div>
+            <div class="bosses"><a href="./bosses.html">BOSSES</a></div>
+            <div class="misc"><a href="./misc.html">MISCELLANEOUS</a></div>
             <form class="search">
                 <input placeholder= "Search"/>
                 <button>Search</button>
             </form>
         </nav>
     </header>   
-    <main>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, praesentium provident nemo possimus maiores debitis voluptatum tempora accusantium, adipisci a, necessitatibus eaque modi id. Quidem, sequi suscipit? Voluptatem, qui numquam?</main>
-    <div class="title">WELCOME</div>
-    <img class ="image" src="media/EldenRingDatabaseImage-Final.png">
+    <main></main>
+    <div class="title"></div>
+    <img class ="image">
     <div class="content1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, laborum ea. Facere aliquam veritatis cum unde dignissimos itaque officiis sint optio et id, voluptates minus! Cumque quasi amet quod consectetur.</div>
     <footer>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias adipisci, sit maiores minus fugit dignissimos iure sint necessitatibus ullam a! Culpa aperiam fuga dolores eaque ab eveniet suscipit, sapiente accusantium.
     </footer>
