I used a map function to create a new element for each weapon name,description and image from my API and appended it for each. Now my data is listing the entire list of items rather than overwritting everything and listing the last item in the array like my forEach method was doing in my previous code.

--- a/weapons.html
+++ b/weapons.html
@@ -27,11 +27,12 @@
             </form>
         </nav>
     </header>   
-    <main></main>
+    <!-- <main></main>
     <div class="title"></div>
     <img class ="image">
     <div class="content1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, laborum ea. Facere aliquam veritatis cum unde dignissimos itaque officiis sint optio et id, voluptates minus! Cumque quasi amet quod consectetur.</div>
     <footer>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias adipisci, sit maiores minus fugit dignissimos iure sint necessitatibus ullam a! Culpa aperiam fuga dolores eaque ab eveniet suscipit, sapiente accusantium.
-    </footer>
+    </footer> -->
 </body>
+<div class="main"></div>
 </html>
