--- a/weapons.html
+++ b/weapons.html
@@ -8,11 +8,12 @@
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
     crossorigin="anonymous"> defer</script>
     <script src="./script.js" defer></script>
-    <link rel="stylesheet" href="./style.css"/>
-    <title>Elden Ring Database</title>
+    <link rel="stylesheet" href="./style-weapon.css"/>
+    <title>Elden Ring Weapons</title>
 </head>
 <video src="media/EldenRingLiveWallpaper.mp4" muted loop autoplay></video>
 <body class="container">
+    <div class="main">
     <header>
         <nav class="navigation-bar">
             <img class="logo" src="media/elden-ring-logo.png">
@@ -26,13 +27,13 @@
                 <button>Search</button>
             </form>
         </nav>
-    </header>   
+    </header>
+    </div>   
     <!-- <main></main>
     <div class="title"></div>
-    <img class ="image">
-    <div class="content1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, laborum ea. Facere aliquam veritatis cum unde dignissimos itaque officiis sint optio et id, voluptates minus! Cumque quasi amet quod consectetur.</div>
-    <footer>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias adipisci, sit maiores minus fugit dignissimos iure sint necessitatibus ullam a! Culpa aperiam fuga dolores eaque ab eveniet suscipit, sapiente accusantium.
-    </footer> -->
-</body>
-<div class="main"></div>
+    <img class="image">
+    <div class="content1"></div>
+    <footer>
+    </footer> -->  
+</body>   
 </html>
