Added the armor function into JS.

--- a/armors.html
+++ b/armors.html
@@ -8,30 +8,32 @@
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
     crossorigin="anonymous"> defer</script>
     <script src="./script.js" defer></script>
-    <link rel="stylesheet" href="./style.css"/>
-    <title>Elden Ring Database</title>
+    <link rel="stylesheet" href="./style-weapon.css"/>
+    <title>Elden Ring Weapons</title>
 </head>
 <video src="media/EldenRingLiveWallpaper.mp4" muted loop autoplay></video>
 <body class="container">
+    <div class="check">
     <header>
         <nav class="navigation-bar">
             <img class="logo" src="media/elden-ring-logo.png">
-            <div class="home"><a href="index.html">HOME</a></div>
-            <div class="weapons"><a href="./weapons.html">WEAPONS</a></div>
-            <div class="armor"><a href="./armors.html">ARMORS</a></div>
-            <div class="bosses"><a href="./bosses.html">BOSSES</a></div>
-            <div class="misc"><a href="./misc.html">MISCELLANEOUS</a></div>
+            <div class="home"><a id="home" href="index.html">HOME</a></div>
+            <div class="weapons"><a id="weapons" href="./weapons.html">WEAPONS</a></div>
+            <div class="armor"><a id="armor" href="./armors.html">ARMORS</a></div>
+            <div class="bosses"><a id="bosses" href="./bosses.html">BOSSES</a></div>
+            <div class="misc"><a id="misc" href="./misc.html">MISCELLANEOUS</a></div>
             <form class="search">
                 <input placeholder= "Search"/>
                 <button>Search</button>
             </form>
         </nav>
-    </header>   
-    <main>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, praesentium provident nemo possimus maiores debitis voluptatum tempora accusantium, adipisci a, necessitatibus eaque modi id. Quidem, sequi suscipit? Voluptatem, qui numquam?</main>
-    <div class="title">WELCOME</div>
-    <img class ="image" src="media/EldenRingDatabaseImage-Final.png">
-    <div class="content1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, laborum ea. Facere aliquam veritatis cum unde dignissimos itaque officiis sint optio et id, voluptates minus! Cumque quasi amet quod consectetur.</div>
-    <footer>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias adipisci, sit maiores minus fugit dignissimos iure sint necessitatibus ullam a! Culpa aperiam fuga dolores eaque ab eveniet suscipit, sapiente accusantium.
-    </footer>
-</body>
+    </header>
+    </div>   
+    <main></main>
+    <div class="title"></div>
+    <img class="image">
+    <div class="content1"></div>
+    <footer>
+    </footer> -->  
+</body>   
 </html>
