--- a/weapons.html
+++ b/weapons.html
@@ -17,11 +17,11 @@
     <header>
         <nav class="navigation-bar">
             <img class="logo" src="media/elden-ring-logo.png">
-            <div class="home"><a href="index.html">HOME</a></div>
-            <div class="weapons"><a href="./weapons.html">WEAPONS</a></div>
-            <div class="armor"><a href="./armors.html">ARMORS</a></div>
-            <div class="bosses"><a href="./bosses.html">BOSSES</a></div>
-            <div class="misc"><a href="./misc.html">MISCELLANEOUS</a></div>
+            <div class="home"><a id="home" href="index.html">HOME</a></div>
+            <div class="weapons"><a id="weapons" href="./weapons.html">WEAPONS</a></div>
+            <div class="armor"><a id="armor" href="./armors.html">ARMORS</a></div>
+            <div class="bosses"><a id="bosses" href="./bosses.html">BOSSES</a></div>
+            <div class="misc"><a id="misc" href="./misc.html">MISCELLANEOUS</a></div>
             <form class="search">
                 <input placeholder= "Search"/>
                 <button>Search</button>
