--- a/misc.html
+++ b/misc.html
@@ -13,7 +13,7 @@
 </head>
 <video src="media/EldenRingLiveWallpaper.mp4" muted loop autoplay></video>
 <body class="container">
-    <div class="main">
+    <div class="mainmisc">
     <header>
         <nav class="navigation-bar">
             <img class="logo" src="media/elden-ring-logo.png">
