Worked on some CSS and added content to the homepage.

--- a/index.html
+++ b/index.html
@@ -26,12 +26,19 @@
                 <button>Search</button>
             </form>
         </nav>
-    </header>   
-    <main>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, praesentium provident nemo possimus maiores debitis voluptatum tempora accusantium, adipisci a, necessitatibus eaque modi id. Quidem, sequi suscipit? Voluptatem, qui numquam?</main>
-    <div class="title">WELCOME</div>
+    </header>
+    <div class="title">About the game</div>
+    <main>Elden Ring is an open-world action role-playing game that was developed by FromSoftware. The gameplay is heavily focused on combat mechanics and exploration; it features similar elements found in games such as, the Dark Souls trilogy, Bloodborne, and Sekiro. The premise is to travel the world in search of all the Great Runes to restore the Elden Ring and become the Elden Lord.  </main>
     <img class ="image" src="media/EldenRingDatabaseImage-Final.png">
-    <div class="content1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, laborum ea. Facere aliquam veritatis cum unde dignissimos itaque officiis sint optio et id, voluptates minus! Cumque quasi amet quod consectetur.</div>
-    <footer>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias adipisci, sit maiores minus fugit dignissimos iure sint necessitatibus ullam a! Culpa aperiam fuga dolores eaque ab eveniet suscipit, sapiente accusantium.
+    <div class="content1">Rise, Tarnished, and be guided by grace to brandish the power of the Elden Ring and become an Elden Lord in the Lands Between.<br>
+    <br>
+    In the Lands Between ruled by Queen Marika the Eternal, the Elden Ring, the source of the Erdtree, has been shattered.
+    <br>    
+    Marika's offspring, demigods all, claimed the shards of the Elden Ring known as the Great Runes, and the mad taint of their newfound strength triggered a war: The Shattering. A war that meant abandonment by the Greater Will.<br>
+     <br>   
+    And now the guidance of grace will be brought to the Tarnished who were spurned by the grace of gold and exiled from the Lands Between. Ye dead who yet live, your grace long lost, follow the path to the Lands Between beyond the foggy sea to stand before the Elden Ring.</div>
+    <footer>Disclaimer:
+    The information on this website is for general informational purposes only. This makes no representation or warranty, express or implied. Your use of the site is solely at your own risk. This site may contain links to third party content, which we do not warrant, endorse, or assume liability for.
     </footer>
 </body>
 </html>
