Changed some formatting, added a little CSS, getting ready to deploy.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
     crossorigin="anonymous"> defer</script>
-    <script src="./script.js" defer></script>
-    <link rel="stylesheet" href="./style.css"/>
+    <script src="scripts/script.js" defer></script>
+    <link rel="stylesheet" href="css/main-style.css"/>
     <title>Elden Ring Database</title>
 </head>
 <video src="media/EldenRingLiveWallpaper.mp4" muted loop autoplay></video>
@@ -27,8 +27,8 @@
             </form>
         </nav>
     </header>
-    <div class="title">About the game</div>
-    <main>Elden Ring is an open-world action role-playing game that was developed by FromSoftware. The gameplay is heavily focused on combat mechanics and exploration; it features similar elements found in games such as, the Dark Souls trilogy, Bloodborne, and Sekiro. The premise is to travel the world in search of all the Great Runes to restore the Elden Ring and become the Elden Lord.  </main>
+    <div class="title">About the website</div>
+    <main>This is an ongoing project based off the game, Elden Ring. This website provides information about weapons, armors, items and bosses within the game. Elden Ring is an open-world action role-playing game that consists of a large amount of data. The main goal of our website is to make data more accessible to the user. This website doesn't currently display all the information from Elden Ring but it does does cover a large amount of it. I hope you enjoy as we continue to push more updates along the way!</main>
     <img class ="image" src="media/EldenRingDatabaseImage-Final.png">
     <div class="content1">Rise, Tarnished, and be guided by grace to brandish the power of the Elden Ring and become an Elden Lord in the Lands Between.<br>
     <br>
@@ -39,6 +39,8 @@
     And now the guidance of grace will be brought to the Tarnished who were spurned by the grace of gold and exiled from the Lands Between. Ye dead who yet live, your grace long lost, follow the path to the Lands Between beyond the foggy sea to stand before the Elden Ring.</div>
     <footer>Disclaimer:
     The information on this website is for general informational purposes only. This makes no representation or warranty, express or implied. Your use of the site is solely at your own risk. This site may contain links to third party content, which we do not warrant, endorse, or assume liability for.
+    <br>
+    All of the data pulled for this website was made possible by: https://docs.eldenring.fanapis.com/
     </footer>
 </body>
 </html>
