--- a/bosses.html
+++ b/bosses.html
@@ -7,9 +7,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
     crossorigin="anonymous"> defer</script>
-    <script src="./script.js" defer></script>
-    <link rel="stylesheet" href="./style-weapon.css"/>
-    <title>Elden Ring Weapons</title>
+    <script src="scripts/script.js" defer></script>
+    <link rel="stylesheet" href="css/subsite-style.css"/>
+    <title>Elden Ring Bosses</title>
 </head>
 <video src="media/EldenRingLiveWallpaper.mp4" muted loop autoplay></video>
 <body class="container">
