Fixed some pathing.

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
     crossorigin="anonymous"> defer</script>
-    <script src="scripts/script.js" defer></script>
-    <link rel="stylesheet" href="css/main-style.css"/>
+    <script src="/Users/davisshoup/Desktop/Elden-Ring-Project/scripts/script.js" defer></script>
+    <link rel="stylesheet" href="/Users/davisshoup/Desktop/Elden-Ring-Project/css/main-style.css"/>
     <title>Elden Ring Database</title>
 </head>
-<video src="media/EldenRingLiveWallpaper.mp4" muted loop autoplay></video>
+<video src="/Users/davisshoup/Desktop/Elden-Ring-Project/media/EldenRingLiveWallpaper.mp4" muted loop autoplay></video>
 <body class="container">
     <header>
         <nav class="navigation-bar">
-            <img class="logo" src="media/elden-ring-logo.png">
-            <div class="home"><a href="index.html">HOME</a></div>
-            <div class="weapons"><a href="./weapons.html">WEAPONS</a></div>
-            <div class="armor"><a href="./armors.html">ARMORS</a></div>
-            <div class="bosses"><a href="./bosses.html">BOSSES</a></div>
-            <div class="misc"><a href="./misc.html">MISCELLANEOUS</a></div>
+            <img class="logo" src="/Users/davisshoup/Desktop/Elden-Ring-Project/media/elden-ring-logo.png">
+            <div class="home"><a href="/Users/davisshoup/Desktop/Elden-Ring-Project/index.html">HOME</a></div>
+            <div class="weapons"><a href="/Users/davisshoup/Desktop/Elden-Ring-Project/weapons.html">WEAPONS</a></div>
+            <div class="armor"><a href="/Users/davisshoup/Desktop/Elden-Ring-Project/armors.html">ARMORS</a></div>
+            <div class="bosses"><a href="/Users/davisshoup/Desktop/Elden-Ring-Project/bosses.html">BOSSES</a></div>
+            <div class="misc"><a href="/Users/davisshoup/Desktop/Elden-Ring-Project/misc.html">MISCELLANEOUS</a></div>
             <form class="search">
                 <input placeholder= "Search"/>
                 <button>Search</button>
@@ -29,7 +29,7 @@
     </header>
     <div class="title">About the website</div>
     <main>This is an ongoing project based off the game, Elden Ring. This website provides information about weapons, armors, items and bosses within the game. Elden Ring is an open-world action role-playing game that consists of a large amount of data. The main goal of our website is to make data more accessible to the user. This website doesn't currently display all the information from Elden Ring but it does does cover a large amount of it. I hope you enjoy as we continue to push more updates along the way!</main>
-    <img class ="image" src="media/EldenRingDatabaseImage-Final.png">
+    <img class ="image" src="/Users/davisshoup/Desktop/Elden-Ring-Project/media/EldenRingDatabaseImage-Final.png">
     <div class="content1">Rise, Tarnished, and be guided by grace to brandish the power of the Elden Ring and become an Elden Lord in the Lands Between.<br>
     <br>
     In the Lands Between ruled by Queen Marika the Eternal, the Elden Ring, the source of the Erdtree, has been shattered.
