--- a/search.html
+++ b/search.html
@@ -7,19 +7,19 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
     crossorigin="anonymous"> defer</script>
-    <script src="./script.js" defer></script>
-    <link rel="stylesheet" href="./style.css"/>
+    <script src="/Users/davisshoup/Desktop/Elden-Ring-Project/scripts/script.js" defer></script>
+    <link rel="stylesheet" href="/Users/davisshoup/Desktop/Elden-Ring-Project/css/style.css"/>
     <title>Elden Ring Database</title>
 </head>
 <video src="media/EldenRingLiveWallpaper.mp4" muted loop autoplay></video>
 <body class="container">
     <header>
         <nav class="navigation-bar">
-            <div class="home"><a href="index.html">HOME</a></div>
-            <div class="weapons"><a href="./weapons.html">WEAPONS</a></div>
-            <div class="armor"><a href="./armors.html">ARMORS</a></div>
-            <div class="bosses"><a href="./bosses.html">BOSSES</a></div>
-            <div class="misc"><a href="./misc.html">MISCELLANEOUS</a></div>
+            <div class="home"><a href="/Users/davisshoup/Desktop/Elden-Ring-Project/index.html">HOME</a></div>
+            <div class="weapons"><a href="/Users/davisshoup/Desktop/Elden-Ring-Project/weapons.html">WEAPONS</a></div>
+            <div class="armor"><a href="/Users/davisshoup/Desktop/Elden-Ring-Project/armors.html">ARMORS</a></div>
+            <div class="bosses"><a href="/Users/davisshoup/Desktop/Elden-Ring-Project/bosses.html">BOSSES</a></div>
+            <div class="misc"><a href="/Users/davisshoup/Desktop/Elden-Ring-Project/misc.html">MISCELLANEOUS</a></div>
             <form class="search">
                 <input placeholder= "Search"/>
                 <button>Search</button>
@@ -28,7 +28,7 @@
     </header>   
     <main>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, praesentium provident nemo possimus maiores debitis voluptatum tempora accusantium, adipisci a, necessitatibus eaque modi id. Quidem, sequi suscipit? Voluptatem, qui numquam?</main>
     <div class="title">WELCOME</div>
-    <img class ="image" src="media/EldenRingDatabaseImage-Final.png">
+    <img class ="image" src="/Users/davisshoup/Desktop/Elden-Ring-Project/media/EldenRingDatabaseImage-Final.png">
     <div class="content1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, laborum ea. Facere aliquam veritatis cum unde dignissimos itaque officiis sint optio et id, voluptates minus! Cumque quasi amet quod consectetur.</div>
     <footer>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias adipisci, sit maiores minus fugit dignissimos iure sint necessitatibus ullam a! Culpa aperiam fuga dolores eaque ab eveniet suscipit, sapiente accusantium.
     </footer>
