--- a/armors.html
+++ b/armors.html
@@ -7,21 +7,21 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
     crossorigin="anonymous"> defer</script>
-    <script src="scripts/script.js" defer></script>
-    <link rel="stylesheet" href="css/subsite-style.css"/>
+    <script src="/Users/davisshoup/Desktop/Elden-Ring-Project/scripts/script.js" defer></script>
+    <link rel="stylesheet" href="/Users/davisshoup/Desktop/Elden-Ring-Project/css/subsite-style.css"/>
     <title>Elden Ring Armors</title>
 </head>
-<video src="media/EldenRingLiveWallpaper.mp4" muted loop autoplay></video>
+<video src="/Users/davisshoup/Desktop/Elden-Ring-Project/media/EldenRingLiveWallpaper.mp4" muted loop autoplay></video>
 <body class="container">
     <div class="check">
     <header>
         <nav class="navigation-bar">
-            <img class="logo" src="media/elden-ring-logo.png">
-            <div class="home"><a id="home" href="index.html">HOME</a></div>
-            <div class="weapons"><a id="weapons" href="./weapons.html">WEAPONS</a></div>
-            <div class="armor"><a id="armor" href="./armors.html">ARMORS</a></div>
-            <div class="bosses"><a id="bosses" href="./bosses.html">BOSSES</a></div>
-            <div class="misc"><a id="misc" href="./misc.html">MISCELLANEOUS</a></div>
+            <img class="logo" src="/Users/davisshoup/Desktop/Elden-Ring-Project/media/elden-ring-logo.png">
+            <div class="home"><a id="home" href="/Users/davisshoup/Desktop/Elden-Ring-Project/index.html">HOME</a></div>
+            <div class="weapons"><a id="weapons" href="/Users/davisshoup/Desktop/Elden-Ring-Project/weapons.html">WEAPONS</a></div>
+            <div class="armor"><a id="armor" href="/Users/davisshoup/Desktop/Elden-Ring-Project/armors.html">ARMORS</a></div>
+            <div class="bosses"><a id="bosses" href="/Users/davisshoup/Desktop/Elden-Ring-Project/bosses.html">BOSSES</a></div>
+            <div class="misc"><a id="misc" href="/Users/davisshoup/Desktop/Elden-Ring-Project/misc.html">MISCELLANEOUS</a></div>
             <form class="search">
                 <input placeholder= "Search"/>
                 <button>Search</button>
