Made a few updates, tried to make a search function

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
     And now the guidance of grace will be brought to the Tarnished who were spurned by the grace of gold and exiled from the Lands Between. Ye dead who yet live, your grace long lost, follow the path to the Lands Between beyond the foggy sea to stand before the Elden Ring.</div>
     <footer>Disclaimer:
     The information on this website is for general informational purposes only. This makes no representation or warranty, express or implied. Your use of the site is solely at your own risk. This site may contain links to third party content, which we do not warrant, endorse, or assume liability for.
-    <br>
-    All of the data pulled for this website was made possible by: https://docs.eldenring.fanapis.com/
+    All of the data pulled for this website was made possible by: https://docs.eldenring.fanapis.com/ <br>
+    Link to this project: <a href= https://github.com/DavisShoup/Elden-Ring-Project >link</a> <br>
+    My LinkedIn profile: <a href= https://www.linkedin.com/in/davis-shoup-70b44b154/ >link</a>
     </footer>
 </body>
 </html>
