--- a/armors.html
+++ b/armors.html
@@ -13,7 +13,7 @@
 </head>
 <video src="./media/EldenRingLiveWallpaper.mp4" muted loop autoplay></video>
 <body class="container">
-    <div class="check">
+    <div class="mainarmors">
     <header>
         <nav class="navigation-bar">
             <img class="logo" src="./media/elden-ring-logo.png">
