--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <footer>Disclaimer:
     The information on this website is for general informational purposes only. This makes no representation or warranty, express or implied. Your use of the site is solely at your own risk. This site may contain links to third party content, which we do not warrant, endorse, or assume liability for.
     All of the data pulled for this website was made possible by: https://docs.eldenring.fanapis.com/ <br>
-    Link to this project: <a href= https://github.com/DavisShoup/Elden-Ring-Project >link</a> <br>
-    My LinkedIn profile: <a href= https://www.linkedin.com/in/davis-shoup-70b44b154/ >link</a>
+    Link to this project: <a href= https://github.com/DavisShoup/Elden-Ring-Project >GitHub</a> <br>
+    My LinkedIn profile: <a href= https://www.linkedin.com/in/davis-shoup-70b44b154/ >LinkedIn</a>
     </footer>
 </body>
 </html>
